--- a/docker-compose-local.yaml
+++ b/docker-compose-local.yaml
@@ -65,7 +65,8 @@ services:
     image: ${IMAGE}
     networks:
       bench-network: null
-      traefik-public: null
+    ports:
+      - "8080:8080"
     volumes:
     - type: volume
       source: sites
